# audio-tools

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_tracks_table.py  0002_create_device_profiles.py  0003_create_features.py  0004_create_clusters.py  0005_create_transfer_sessions.py
docs/superpowers/plans/: 2026-05-25-audio-tools-phase1-foundation.md  2026-05-26-audio-tools-phase2-analyzer-clusterer-playlists.md  2026-05-26-audio-tools-phase3-transfer.md  2026-05-26-audio-tools-phase4-gui.md
docs/superpowers/specs/: 2026-05-25-audio-tools-design.md  2026-05-26-audio-tools-phase2-design.md  2026-05-26-audio-tools-phase3-design.md  2026-05-26-audio-tools-phase4-design.md
src/audio_tools/: __main__.py  cli.py  paths.py
src/audio_tools/core/: album_art.py  analyzer.py  clusterer.py  db.py  device_profile.py  hashing.py  m3u_path_style.py  model_registry.py  models.py  playlist_builder.py  scanner.py  tags.py  transcoder.py  transfer.py  transfer_planner.py  (+1 more)
tests/: conftest.py
tests/fixtures/: generate_audio_fixtures.sh
tests/golden/: test_album_art_preserved.py  test_essentia_backend.py  test_transcoder_codecs.py
tests/gui/: conftest.py  test_main_window.py  test_views_smoke.py  test_workers.py
tests/unit/: test_analyzer.py  test_cli.py  test_clusterer.py  test_db.py  test_device_profile.py  test_hashing.py  test_import.py  test_m3u_path_style.py  test_paths.py  test_playlist_builder.py  test_scanner.py  test_tags.py  test_transcoder.py  test_transfer.py  test_transfer_planner.py  test_transfer_target.py
(+8 files in other folders)
