[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-tools"
version = "0.1.0"
description = "Mood/tempo-based music playlist generator and media player transfer tool"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "click>=8.1",
    "mutagen>=1.47",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
analysis = [
    "essentia-tensorflow>=2.1b6.dev1110",
]

[project.scripts]
audio-tools = "audio_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
